@@ -1,14 +1,14 @@
-uqm_SUBDIRS="comm planets ships"
+uqm_SUBDIRS="comm planets ships supermelee"
 uqm_CFILES="battle.c battlecontrols.c border.c build.c cleanup.c clock.c
 		cnctdlg.c collide.c comm.c commanim.c commglue.c confirm.c credits.c
 		cyborg.c demo.c displist.c dummy.c encount.c flash.c fmv.c galaxy.c
 		gameev.c gameinp.c gameopt.c gendef.c getchar.c globdata.c gravity.c
 		cons_res.c grpinfo.c hyper.c init.c intel.c intro.c ipdisp.c load.c
-		loadmele.c loadship.c master.c melee.c menu.c misc.c oscill.c
-		outfit.c pickmele.c pickship.c plandata.c process.c restart.c save.c
-		settings.c setup.c setupmenu.c ship.c shipstat.c shipyard.c sis.c
-		sounds.c starbase.c starcon.c starmap.c state.c status.c tactrans.c
-		trans.c uqmdebug.c util.c velocity.c weapon.c"
+		loadship.c master.c menu.c misc.c oscill.c outfit.c pickship.c
+		plandata.c process.c restart.c save.c settings.c setup.c setupmenu.c
+		ship.c shipstat.c shipyard.c sis.c sounds.c starbase.c starcon.c
+		starmap.c state.c status.c tactrans.c trans.c uqmdebug.c util.c
+		velocity.c weapon.c"
 if [ -n "$uqm_NETPLAY" ]; then
 	uqm_SUBDIRS="$uqm_SUBDIRS netplay"
 fi
